# SDLC-harness-mix-00

./: .gitignore  .gitmodules  idea.md
.claude/PRPs/reports/: git-archive-report.md
harness-prompt-classifier/: spec-to-task.md
raw-harness-repo/: .env.example  README.md  dir-download.py  download_repos.py  pyproject.toml  repo-urls.md  repos-config.json  test_download_repos.py  test_urls_to_config.py  urls_to_config.py
raw-harness-repo/.claude/PRPs/plans/completed/: auto-discover-gstack-skills.md
raw-harness-repo/.claude/PRPs/reports/: auto-discover-gstack-skills-report.md
raw-harness-repo/config/: repos-config.json  repos-config.json.full  repos-config.json.test
raw-harness-repo/config/features-locations/: OpenSpec.md  Trellis.md  gstack.md  superpowers.md
raw-harness-repo/docs/: auto-discover-gstack-skills.md  git-archive-01.md  harness-mix-download.md  idea.md  mul-dir-download-update.md  note.md  redundant-download-fix.md  repos-git-manage.md  sparse-check.md  sparse-checkout-demos.md  structure-refactor-tasks.md  structure-refactor.md
raw-harness-repo/repos/open-gsd/gsd-core/gsd-core/workflows/: discuss-phase.md  execute-phase.md  plan-phase.md  ship.md  verify-work.md
raw-harness-repo/src/raw_harness/: dir-download.py  download_repos.py  paths.py  skill_folders.py
raw-harness-repo/src/raw_harness/utils/: git_archive.py  urls_to_config.py
raw-harness-repo/tests/: test_dir_download.py  test_download_repos.py  test_git_archive.py  test_urls_to_config.py
raw-harness-repo/utils/: git-archive.py  test_git_archive.py
